--- a/installer.cfg
+++ b/installer.cfg
@@ -4,7 +4,7 @@ version=1.0
 publisher=Enkindle
 # How to launch the app - this calls the 'main' function from the 'myapp' package:
 entry_point=main:main
-;icon=myapp.ico
+icon=acta.ico
 
 [Python]
 version=3.10.0
