--- a/installer.cfg
+++ b/installer.cfg
@@ -1,7 +1,7 @@
 [Application]
 name=ACTA Surveyor Edition
 version=1.0
-publisher=metaflow.ca
+publisher=Metaflow Inc.
 # How to launch the app - this calls the 'main' function from the 'myapp' package:
 entry_point=main:main
 icon=acta.ico
