--- a/installer.cfg
+++ b/installer.cfg
@@ -1,10 +1,13 @@
 [Application]
-name=ACTA Surveyor Edition
+# Name of the application
+name=Example Application
 version=1.0
-publisher=Metaflow Inc.
+# Publisher
+publisher=rohitchakraborty
 # How to launch the app - this calls the 'main' function from the 'myapp' package:
 entry_point=main:main
-icon=acta.ico
+# Set icon. Will be the default on if not defined
+;icon=example.ico
 
 [Python]
 version=3.10.0
@@ -22,6 +25,5 @@ pypi_wheels = requests==2.18.4
      distlib==0.3.4
 
 # Other files and folders that should be installed
-# Add the path to BART project and python installer
-#files = D:\Work\git\BART
-#     D:\Work\Test\python-3.10.1-amd64.exe
+# Add the path to your project and any other additional tools required
+#files = D:\Work\git\Example
